include_HEADERS = \
	libcaes.h

pkginclude_HEADERS = \
	libcaes/definitions.h \
	libcaes/error.h \
	libcaes/extern.h \
	libcaes/features.h \
	libcaes/types.h

EXTRA_DIST = \
	libcaes.h.in \
	libcaes/definitions.h.in \
	libcaes/features.h.in \
	libcaes/types.h.in

DISTCLEANFILES = \
	libcaes.h \
	libcaes/definitions.h \
	libcaes/features.h \
	libcaes/types.h \
	Makefile \
	Makefile.in

