MSVSCPP_FILES = \
	caes_test_context/caes_test_context.vcproj \
	caes_test_crypt_cbc/caes_test_crypt_cbc.vcproj \
	caes_test_crypt_ccm/caes_test_crypt_ccm.vcproj \
	caes_test_crypt_cfb/caes_test_crypt_cfb.vcproj \
	caes_test_crypt_ecb/caes_test_crypt_ecb.vcproj \
	caes_test_crypt_xts/caes_test_crypt_xts.vcproj \
	caes_test_error/caes_test_error.vcproj \
	caes_test_key/caes_test_key.vcproj \
	caes_test_support/caes_test_support.vcproj \
	caes_test_tweaked_context/caes_test_tweaked_context.vcproj \
	libcaes/libcaes.vcproj \
	libcerror/libcerror.vcproj \
	pycaes/pycaes.vcproj \
	libcaes.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

