MSVSCPP_FILES = \
	caes_test_context/caes_test_context.vcproj \
	caes_test_crypt_cbc/caes_test_crypt_cbc.vcproj \
	caes_test_crypt_ccm/caes_test_crypt_ccm.vcproj \
	caes_test_crypt_xts/caes_test_crypt_xts.vcproj \
	caes_test_error/caes_test_error.vcproj \
	caes_test_support/caes_test_support.vcproj \
	caes_test_tweaked_context/caes_test_tweaked_context.vcproj \
	libcaes/libcaes.vcproj \
	libcerror/libcerror.vcproj \
	pycaes/pycaes.vcproj \
	libcaes.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

DISTCLEANFILES = \
	Makefile \
	Makefile.in

